--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
         "koa": "2.0.0",
         "koa-onerror": "^4.1.0",
         "koa-route": "^3.2.0",
-        "promise-timeout": "^1.3.0"
+        "mariadb": "^2.0.3",
+        "mysql2": "^1.6.5",
+        "promise-timeout": "^1.3.0",
+        "sequelize": "^5.8.5"
     }
 }
