--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     },
     "dependencies": {
         "axios": "^0.18.0",
+        "dotenv": "^8.0.0",
         "fresh": ">=0.5.2",
         "koa": "^2.7.0",
+        "koa-bodyparser": "^2.5.0",
         "koa-onerror": "^4.1.0",
         "koa-route": "^3.2.0",
         "mariadb": "^2.0.3",
